# matrix-validator

./: .cruft.json  .gitignore  CONTRIBUTING.md  Makefile  README.md  config.toml  config.yaml  config_robokop.toml  config_rtxkg2.toml  pyproject.toml  tox.ini
.github/workflows/: deploy-docs.yml  qc.yml
docs/: conf.py  index.rst
rusty-mv/: Cargo.toml  pyproject.toml
rusty-mv/src/: lib.rs
src/matrix_validator/: __init__.py  cli.py  datamodels.py  util.py  validate-edges.py  validate-nodes.py  validate_edges.py  validate_nodes.py  validator.py  validator_polars.py  validator_purepython.py  validator_schema.py
src/matrix_validator/checks/: __init__.py  check_column_contains_biolink_model_agent_type.py  check_column_contains_biolink_model_knowledge_level.py  check_column_contains_biolink_model_prefix.py  check_column_is_delimited_by_pipes.py  check_column_is_valid_curie.py  check_column_no_leading_whitespace.py  check_column_no_trailing_whitespace.py  check_column_range.py  check_column_starts_with_biolink.py  check_edge_ids_in_node_ids.py  check_node_id_and_category_with_biolink_preferred_prefixes.py
tests/: __init__.py  test_util.py  test_validate.py
tests/data/: testdata_robokop-kg_edges.tsv  testdata_robokop-kg_nodes.tsv  testdata_rtxkg2-kg_edges.tsv  testdata_rtxkg2-kg_nodes.tsv  testdata_spoke_edges.tsv  testdata_spoke_nodes.tsv
