[package]
name = "rusty-mv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_mv"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
csv = "^1.1"
env_logger = "^0.11"
humantime = "^2.1"
itertools = "^0.13"
lazy_static = "^1.3"
log = { version = "^0.4", features = ["std"] }
rayon = "^1.5"
regex = "^1.5"
serde = { version = "^1.0", features = ["derive", "serde_derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
